--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
     <main>
       <div class="wallpaper container">
-        <h1 class="wallpaper__heading">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU<br /></h1>
+        <h1 class="wallpaper__heading box-social">
+          EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU<br />
+        </h1>
         <div class="wallpaper__button">
           <button type="button" class="wallpaper__button-specification" data-modal-open>
             Zamów usługę
@@ -75,7 +77,7 @@
         </div>
       </div>
 
-      <section id="lorem-ipsum" class="boxes">
+      <section id="signature" class="boxes">
         <div class="container">
           <ul class="boxes__items">
             <li class="boxes__items--position">
@@ -101,33 +103,33 @@
           </ul>
         </div>
       </section>
-      <section id="lorem-ipsum" class="boxes">
+      <section id="signature">
         <div class="container">
           <ul class="boxes__items">
             <li class="boxes__items--position">
-              <p class="lorem-ipsum">LOREM IPSUM</p>
-              <p class="position-lorem">
+              <p class="signature">LOREM IPSUM</p>
+              <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
             <li class="boxes__items--position">
-              <p class="lorem-ipsum">LOREM IPSUM</p>
-              <p class="position-lorem">
+              <p class="signature">LOREM IPSUM</p>
+              <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
             <li class="boxes__items--position">
-              <p class="lorem-ipsum">LOREM IPSUM</p>
-              <p class="position-lorem">
+              <p class="signature">LOREM IPSUM</p>
+              <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
             <li class="boxes__items--position">
-              <p class="lorem-ipsum">LOREM IPSUM</p>
-              <p class="position-lorem">
+              <p class="signature">LOREM IPSUM</p>
+              <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -137,36 +139,37 @@
       </section>
       <section id="what-we-do" class="section">
         <div class="container">
-          <h3 class="position-h3">Czym się zajmujemy</h3>
-          <ul class="location-what-we-do">
-            <li class="boxes__items--position">
+          <h3>Czym się zajmujemy</h3>
+          <ul class="what-we-do">
+            <li class="what-we-do--position-box">
               <img src="images/img2.jpg" width="370" height="294" alt="computer" />
-              <figcaption class="label">aplikacje komputerowe</figcaption>
+              <figcaption class="what-we-do__signature">aplikacje komputerowe</figcaption>
             </li>
-            <li class="boxes__items--position">
+            <li class="what-we-do--position-box">
               <img src="images/img1.jpg" width="370" height="294" alt="phone" />
-              <figcaption class="label">aplikacje mobilne</figcaption>
+              <figcaption class="what-we-do__signature">aplikacje mobilne</figcaption>
             </li>
-            <li class="boxes__items--position">
+            <li class="what-we-do--position-box">
               <img src="images/img3.jpg" width="370" height="294" alt="tablet" />
-              <figcaption class="label">rozwiązania graficzne</figcaption>
+              <figcaption class="what-we-do__signature">rozwiązania graficzne</figcaption>
             </li>
           </ul>
         </div>
       </section>
-      <section id="our-team" class="background section">
+      <section id="our-team" class="team-background section">
         <div class="container">
           <h3>Nasz zespół</h3>
 
-          <ul class="location-our-team">
-            <li class="photo-box">
+          <ul class="team-position">
+            <li class="team__photo-position">
               <img src="images/person1.jpg" width="270" height="260" alt="Product-Designer" />
-              <p class="positon-text-photo">
-                <span class="text-picture">John Doe</span><br />Product Designer<br />
+              <p class="team__photo-signature">
+                <span class="team__photo-signature--details">John Doe</span><br />Product
+                Designer<br />
               </p>
 
-              <div class="box-socials">
-                <svg class="box-social">
+              <div class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-insta"
                     height="20px"
@@ -177,7 +180,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-tweet"
                     height="20px"
@@ -188,7 +191,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-face"
                     height="20px"
@@ -199,7 +202,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-linke"
                     height="20px"
@@ -212,14 +215,14 @@
               </div>
             </li>
 
-            <li class="photo-box">
+            <li class="team__photo-position">
               <img src="images/person2.jpg" width="270" height="260" alt="Fronted-Developer" />
-              <p class="positon-text-photo">
-                <span class="text-picture">John Doe</span><br />
+              <p class="team__photo-signature">
+                <span class="team__photo-signature--details">John Doe</span><br />
                 Fronted Developer<br />
               </p>
-              <div class="box-socials">
-                <svg class="box-social">
+              <div class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-insta"
                     height="20px"
@@ -230,7 +233,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-tweet"
                     height="20px"
@@ -241,7 +244,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-face"
                     height="20px"
@@ -252,7 +255,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-linke"
                     height="20px"
@@ -264,13 +267,13 @@
                 </svg>
               </div>
             </li>
-            <li class="photo-box">
+            <li class="team__photo-position">
               <img src="images/person3.jpg" width="270" height="260" alt="Marketing" />
-              <p class="positon-text-photo">
-                <span class="text-picture">John Doe</span><br />Marketing<br />
+              <p class="team__photo-signature">
+                <span class="team__photo-signature--details">John Doe</span><br />Marketing<br />
               </p>
-              <div class="box-socials">
-                <svg class="box-social">
+              <div class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-insta"
                     height="20px"
@@ -281,7 +284,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-tweet"
                     height="20px"
@@ -292,7 +295,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-face"
                     height="20px"
@@ -303,7 +306,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-linke"
                     height="20px"
@@ -315,14 +318,14 @@
                 </svg>
               </div>
             </li>
-            <li class="photo-box">
+            <li class="team__photo-position">
               <img src="images/person4.jpg" width="270" height="260" alt="UI-Designer" />
-              <p class="positon-text-photo">
-                <span class="text-picture">John Doe</span><br />
+              <p class="team__photo-signature">
+                <span class="team__photo-signature--details">John Doe</span><br />
                 UI Designer<br />
               </p>
-              <div class="box-socials">
-                <svg class="box-social">
+              <div class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-insta"
                     height="20px"
@@ -333,7 +336,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-tweet"
                     height="20px"
@@ -344,7 +347,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-face"
                     height="20px"
@@ -355,7 +358,7 @@
                   ></use>
                 </svg>
 
-                <svg class="box-social">
+                <svg class="box-social--circle">
                   <use
                     href="./images/icons.svg#icon-linke"
                     height="20px"
@@ -373,61 +376,58 @@
       <section>
         <div class="container section">
           <h3>Nasi klienci</h3>
-          <div class="icon-header-client">
-            <div class="fill border-box">
-              <svg height="92px" ; width="170px">
-                <use href="./images/icons.svg#icon-client-1"></use>
-              </svg>
-            </div>
-            <svg class="fill border-box" height="92px" ; width="170px">
+          <div class="customers">
+            <svg class="customers__box" height="92px" ; width="170px">
+              <use href="./images/icons.svg#icon-client-1"></use>
+            </svg>
+            <svg class="customers__box" height="92px" ; width="170px">
               <use href="./images/icons.svg#icon-client-2"></use>
             </svg>
-            <svg class="fill border-box" height="92px" ; width="170px">
+            <svg class="customers__box" height="92px" ; width="170px">
               <use href="./images/icons.svg#icon-client-3"></use>
             </svg>
-            <svg class="fill border-box" height="92px" ; width="170px">
+            <svg class="customers__box" height="92px" ; width="170px">
               <use href="./images/icons.svg#icon-client-4"></use>
             </svg>
-            <svg class="fill border-box" height="92px" ; width="170px">
+            <svg class="customers__box" height="92px" ; width="170px">
               <use href="./images/icons.svg#icon-client-5"></use>
             </svg>
-            <svg class="fill border-box" height="92px" ; width="170px">
+            <svg class="customers__box" height="92px" ; width="170px">
               <use href="./images/icons.svg#icon-client-6"></use>
             </svg>
           </div>
         </div>
       </section>
     </main>
-    <footer class="section-footer">
+
+    <footer class="footer">
       <div class="container">
-        <ul class="location-social-footer">
+        <ul class="footer-position">
           <li>
-            <ul class="position-ul-footer">
+            <ul class="footer--padding">
               <li>
-                <a href="index.html" class="logo-footer"
-                  ><span class="colorweb">Web</span>Studio
+                <a href="index.html" class="footer-logo"
+                  ><span class="footer-logo--color">Web</span>Studio
                 </a>
               </li>
-              <li class="address-position">
-                <address class="italics">m. Warszawa, Aleje Jerozolimskie 21</address>
+              <li class="footer-adress--padding">
+                <address class="footer-adress--italics">
+                  m. Warszawa, Aleje Jerozolimskie 21
+                </address>
               </li>
-              <li class="address-email">
-                <a href="mailto:nfo@devstudio.com" class="header__menu-list-phone--color"
-                  >info@devstudio.com</a
-                >
+              <li class="footer-email--padding">
+                <a href="mailto:nfo@devstudio.com" class="footer--color">info@devstudio.com</a>
               </li>
-              <li class="address-email">
-                <a href="tel:+48111111111" class="header__menu-list-phone--color"
-                  >+48 111 111 111</a
-                >
+              <li class="footer-email--padding">
+                <a href="tel:+48111111111" class="footer--color">+48 111 111 111</a>
               </li>
             </ul>
           </li>
 
-          <li class="location-join-us">
+          <li class="joinus">
             <ul>
-              <li><p class="join-us">DOŁĄCZ DO NAS</p></li>
-              <svg class="box-social background-social-none-left">
+              <li><p class="joinus--font">DOŁĄCZ DO NAS</p></li>
+              <svg class="box-social--circle join joinus__icon--margin-left">
                 <use
                   href="./images/icons.svg#icon-insta"
                   height="20px"
@@ -438,7 +438,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-tweet"
                   height="20px"
@@ -449,7 +449,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-face"
                   height="20px"
@@ -460,7 +460,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-linke"
                   height="20px"
@@ -473,59 +473,63 @@
             </ul>
           </li>
 
-          <li class="location-join-us">
+          <li class="newslatter">
             <ul>
-              <li><p class="newslatter-style">ZAPISZ SIE DO NEWSLETTERA</p></li>
-              <input placeholder="E-mail" class="newslatter" type="email" name="mail" />
+              <li><p class="newslatter--font">ZAPISZ SIE DO NEWSLETTERA</p></li>
+              <input placeholder="E-mail" class="newslatter__label" type="email" name="mail" />
             </ul>
           </li>
-          <li><button type="button" class="button-save">Zapisz się</button></li>
+          <li><button type="button" class="newslatter__button">Zapisz się</button></li>
         </ul>
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button type="button" class="close" data-modal-close>
-          <svg class="position-close">
+    <div class="modal-window-backdrop is-hidden" data-modal>
+      <div class="modal-window">
+        <button type="button" class="modal-window__close" data-modal-close>
+          <svg class="modal-window__close--position">
             <use href="./images/icons.svg#icon-close" height="20px" width="20px"></use>
           </svg>
         </button>
-        <p class="label-form">Zostaw swoje dane w formularzu poniżej</p>
+        <p class="modal-window__title">Zostaw swoje dane w formularzu poniżej</p>
 
         <form>
           <label
-            >Imię<input class="border-style" type="text" name="username" />
-            <svg class="position-svg">
+            >Imię<input class="modal-window__label" type="text" name="username" />
+            <svg class="modal-window__label-icon">
               <use href="./images/icons.svg#icon-person" height="18px" width="18px"></use>
             </svg>
           </label>
           <label
-            >Telefon<input class="border-style" type="tel" name="phone" /><svg class="position-svg">
+            >Telefon<input class="modal-window__label" type="tel" name="phone" /><svg
+              class="modal-window__label-icon"
+            >
               <use href="./images/icons.svg#icon-phone-black" height="18px" width="18px"></use>
             </svg>
           </label>
           <label
-            >Email<input class="border-style" type="email" name="mail" /><svg class="position-svg">
+            >Email<input class="modal-window__label" type="email" name="mail" /><svg
+              class="modal-window__label-icon"
+            >
               <use href="./images/icons.svg#icon-email-black" height="18px" width="18px"></use>
             </svg>
           </label>
           <label
             >Komentarz<textarea
-              class="size-comment border-style"
+              class="modal-window__textarea modal-window__label"
               placeholder="Wprowadź tekst"
             ></textarea>
           </label>
-          <label class="position-text-box">
-            <input class="check-box" type="checkbox" />
+          <label class="modal-window__checkbox">
+            <input class="modal-window__checkbox--position" type="checkbox" />
 
             Oświadczam iż akceptuję
-            <p class="inline">Regulamin</p>
+            <p class="modal-window__checkbox-title">Regulamin</p>
             i
-            <p class="inline">Politykę Prywatności.</p></label
+            <p class="modal-window__checkbox-title">Politykę Prywatności.</p></label
           >
         </form>
-        <button type="button" class="button-send">Wyślij</button>
+        <button type="button" class="modal-window__button-send">Wyślij</button>
       </div>
     </div>
 
