--- a/portfolio.html
+++ b/portfolio.html
@@ -209,36 +209,34 @@
         </li>
       </ul>
     </section>
-    <footer class="section-footer">
+    <footer class="footer">
       <div class="container">
-        <ul class="location-social-footer">
+        <ul class="footer-position">
           <li>
-            <ul class="position-ul-footer">
+            <ul class="footer--padding">
               <li>
-                <a href="index.html" class="logo-footer"
-                  ><span class="colorweb">Web</span>Studio
+                <a href="index.html" class="footer-logo"
+                  ><span class="footer-logo--color">Web</span>Studio
                 </a>
               </li>
-              <li class="address-position">
-                <address class="italics">m. Warszawa, Aleje Jerozolimskie 21</address>
+              <li class="footer-adress--padding">
+                <address class="footer-adress--italics">
+                  m. Warszawa, Aleje Jerozolimskie 21
+                </address>
               </li>
-              <li class="address-email">
-                <a href="mailto:nfo@devstudio.com" class="header__menu-list-phone--color"
-                  >info@devstudio.com</a
-                >
+              <li class="footer-email--padding">
+                <a href="mailto:nfo@devstudio.com" class="footer--color">info@devstudio.com</a>
               </li>
-              <li class="address-email">
-                <a href="tel:+48111111111" class="header__menu-list-phone--color"
-                  >+48 111 111 111</a
-                >
+              <li class="footer-email--padding">
+                <a href="tel:+48111111111" class="footer--color">+48 111 111 111</a>
               </li>
             </ul>
           </li>
 
-          <li class="location-join-us">
+          <li class="joinus">
             <ul>
-              <li><p class="join-us">DOŁĄCZ DO NAS</p></li>
-              <svg class="box-social background-social-none-left">
+              <li><p class="joinus--font">DOŁĄCZ DO NAS</p></li>
+              <svg class="box-social--circle join joinus__icon--margin-left">
                 <use
                   href="./images/icons.svg#icon-insta"
                   height="20px"
@@ -249,7 +247,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-tweet"
                   height="20px"
@@ -260,7 +258,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-face"
                   height="20px"
@@ -271,7 +269,7 @@
                 ></use>
               </svg>
 
-              <svg class="box-social background-social-icon">
+              <svg class="box-social--circle joinus__icon">
                 <use
                   href="./images/icons.svg#icon-linke"
                   height="20px"
@@ -284,13 +282,13 @@
             </ul>
           </li>
 
-          <li class="location-join-us">
+          <li class="newslatter">
             <ul>
-              <li><p class="newslatter-style">ZAPISZ SIE DO NEWSLETTERA</p></li>
-              <input placeholder="E-mail" class="newslatter" type="email" name="mail" />
+              <li><p class="newslatter--font">ZAPISZ SIE DO NEWSLETTERA</p></li>
+              <input placeholder="E-mail" class="newslatter__label" type="email" name="mail" />
             </ul>
           </li>
-          <li><button type="button" class="button-save">Zapisz się</button></li>
+          <li><button type="button" class="newslatter__button">Zapisz się</button></li>
         </ul>
       </div>
     </footer>
