--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
             <li class="header__menu-list-email">
               <a href="mailto:nfo@devstudio.com" class="header__menu-list-email--color">
-                <svg class="icon-header-spacing" height="12px" ; width="16px">
+                <svg class="header__menu-list--spacing" height="12px" ; width="16px">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -54,7 +54,7 @@
             </li>
             <li class="header__menu-list-phone">
               <a href="tel:+48111111111" class="header__menu-list-phone--color"
-                ><svg class="icon-header-spacing" height="16px" ; width="10px">
+                ><svg class="header__menu-list--spacing" height="16px" ; width="10px">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +48 111 111 111</a
