--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
             </li>
             <li class="header__menu-list-email">
               <a href="mailto:nfo@devstudio.com" class="header__menu-list-email--color">
-                <svg class="icon-header-spacing" height="12px" ; width="16px">
+                <svg class="header__menu-list--spacing" height="12px" ; width="16px">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -52,7 +52,7 @@
             </li>
             <li class="header__menu-list-phone">
               <a href="tel:+48111111111" class="header__menu-list-phone--color"
-                ><svg class="icon-header-spacing" height="16px" ; width="10px">
+                ><svg class="header__menu-list--spacing" height="16px" ; width="10px">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +48 111 111 111</a
@@ -63,29 +63,29 @@
       </div>
     </header>
     <section class="section container">
-      <div class="buttonportfolio-set button-set">
+      <div class="five-buttons">
         <main>
-          <button class="buttonportfolio">
+          <button class="five-buttons-details">
             <span>Wszystkie</span>
           </button>
-          <button class="buttonportfolio">
+          <button class="five-buttons-details">
             <span>Strony</span>
           </button>
-          <button class="buttonportfolio">
+          <button class="five-buttons-details">
             <span>Aplikacje</span>
           </button>
-          <button class="buttonportfolio">
+          <button class="five-buttons-details">
             <span>Dizajn</span>
           </button>
-          <button class="buttonportfolio">
+          <button class="five-buttons-details">
             <span>Marketing</span>
           </button>
         </main>
       </div>
 
       <ul class="card-portfolio container">
-        <li class="item-portfolio-left">
-          <div class="box img-tech">
+        <li class="card-portfolio--position-left">
+          <div class="card-portfolio__box img-tech">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -94,12 +94,12 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Technocrack</p>
-          <p class="font2">Strona internetowa</p>
+          <p class="card-portfolio__description">Technocrack</p>
+          <p class="card-portfolio__tilte">Strona internetowa</p>
         </li>
 
-        <li class="item-portfolio-center">
-          <div class="box img-diz">
+        <li class="card-portfolio--position-center">
+          <div class="card-portfolio__box img-diz">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -108,11 +108,11 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Grafika New Orlean vs Golden Star</p>
-          <p class="font2">Dizajn</p>
+          <p class="card-portfolio__description">Grafika New Orlean vs Golden Star</p>
+          <p class="card-portfolio__tilte">Dizajn</p>
         </li>
-        <li class="item-portfolio-right">
-          <div class="box img-ap">
+        <li class="card-portfolio--position-right">
+          <div class="card-portfolio__box img-ap">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -121,13 +121,13 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Restauracja Seafood</p>
-          <p class="font2">Aplikacja</p>
+          <p class="card-portfolio__description">Restauracja Seafood</p>
+          <p class="card-portfolio__tilte">Aplikacja</p>
         </li>
       </ul>
       <ul class="card-portfolio">
-        <li class="item-portfolio-left">
-          <div class="box img-prime">
+        <li class="card-portfolio--position-left">
+          <div class="card-portfolio__box img-prime">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -136,11 +136,11 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Projekt Prime</p>
-          <p class="font2">Marketing</p>
+          <p class="card-portfolio__description">Projekt Prime</p>
+          <p class="card-portfolio__tilte">Marketing</p>
         </li>
-        <li class="item-portfolio-center">
-          <div class="box img-pro">
+        <li class="card-portfolio--position-center">
+          <div class="card-portfolio__box img-pro">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -149,11 +149,11 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Projekt Boxes</p>
-          <p class="font2">Aplikacja</p>
+          <p class="card-portfolio__description">Projekt Boxes</p>
+          <p class="card-portfolio__tilte">Aplikacja</p>
         </li>
-        <li class="item-portfolio-right">
-          <div class="box img-insp">
+        <li class="card-portfolio--position-right">
+          <div class="card-portfolio__box img-insp">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -162,14 +162,14 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Inspiration has no Borders</p>
-          <p class="font2">Strona internetowa</p>
+          <p class="card-portfolio__description">Inspiration has no Borders</p>
+          <p class="card-portfolio__tilte">Strona internetowa</p>
         </li>
       </ul>
 
       <ul class="card-portfolio">
-        <li class="item-portfolio-left">
-          <div class="box img-mag">
+        <li class="card-portfolio--position-left">
+          <div class="card-portfolio__box img-mag">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -178,11 +178,11 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Magazyn Limited Edition</p>
-          <p class="font2">Dizajn</p>
+          <p class="card-portfolio__description">Magazyn Limited Edition</p>
+          <p class="card-portfolio__tilte">Dizajn</p>
         </li>
-        <li class="item-portfolio-center">
-          <div class="box img-lab">
+        <li class="card-portfolio--position-center">
+          <div class="card-portfolio__box img-lab">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -191,11 +191,11 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Projekt LAB</p>
-          <p class="font2">Marketing</p>
+          <p class="card-portfolio__description">Projekt LAB</p>
+          <p class="card-portfolio__tilte">Marketing</p>
         </li>
-        <li class="item-portfolio-right">
-          <div class="box img-gro">
+        <li class="card-portfolio--position-right">
+          <div class="card-portfolio__box img-gro">
             <div class="overlay">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -204,8 +204,8 @@
               </p>
             </div>
           </div>
-          <p class="text-picture">Growing Business</p>
-          <p class="font2">Aplikacja</p>
+          <p class="card-portfolio__description">Growing Business</p>
+          <p class="card-portfolio__tilte">Aplikacja</p>
         </li>
       </ul>
     </section>
